--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
     <body>
         <h1>My GitHub page!</h1>
         <p><a href="/taniti">Taniti</a>: A project site for my UX Design course.</p>
+        <p><a href="/c868">C868</a>: A project site for my Software Development capstone.</p>
     </body>
 </html>
